--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "demo"
+name = "file-server"
 version = "0.1.0"
 edition = "2021"
 
@@ -12,11 +12,5 @@ tracing-subscriber = "0.3.22"
 tower-http = { version = "0.5.2", features = ["fs", "cors"] }
 serde_json = "1.0.145"
 serde = { version = "1.0", features = ["derive"] }
-tower = "0.4"
-uuid = { version = "1.0", features = ["v4", "serde"] }
 chrono = { version = "0.4", features = ["serde"] }
-bytes = "1.5"
-multer = "3.0"
 anyhow = "1.0"
-thiserror = "1.0"
-mime = "0.3"
